--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
+    "connect-pg-simple": "^6.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "pg": "^8.0.2",
     "react-router-dom": "^5.1.2",
