--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
+    "clsx": "^1.1.0",
     "connect-pg-simple": "^6.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
